--- a/styles/view/home/main.css
+++ b/styles/view/home/main.css
@@ -1,29 +1,6 @@
-nav ul {
-    display: flex;
-    justify-content: space-between;
-}
-
-nav ul li:nth-of-type(2) button {
-    border: none;
-
-    background-color: transparent;
-}
-
-header h1 {
-    grid-column-start: 1;
-    grid-column-end: 5;
-
-    margin-top: 1em;
-}
-
-header div {
-    grid-column-start: 5;
-    grid-column-end: 13;
-}
-
-header div img {
-    width: 100%;
-}
+/* ********** */
+/* SECTION 2 */
+/* ******** */
 
 main section:nth-of-type(2) {
     display: flex;
@@ -63,10 +40,18 @@ main section:nth-of-type(2) article:nth-of-type(2) p:nth-of-type(2) {
     grid-column-end: 13;
 }
 
+/* ********** */
+/* SECTION 3 */
+/* ******** */
+
 main section:nth-of-type(3) h2 {
     grid-column-start: 3;
     grid-column-end: 13;
 }
+
+/* ********** */
+/* SECTION 4 */
+/* ******** */
 
 main section:nth-of-type(4) article:nth-of-type(1) h2 {
     grid-column-start: 1;
@@ -96,6 +81,10 @@ main section:nth-of-type(4) article:nth-of-type(2) div img {
     width: 75%;
 }
 
+/* ********** */
+/* SECTION 5 */
+/* ******** */
+
 main section:nth-of-type(5) h2 {
     grid-column-start: 1;
     grid-column-end: 3;
@@ -106,7 +95,7 @@ main section:nth-of-type(5) ul {
     grid-column-end: 13;
 }
 
-.accordion-button {
+main section:nth-of-type(5) ul li button {
     width: 100%;
 
     padding: 1.4em 0;
@@ -116,41 +105,54 @@ main section:nth-of-type(5) ul {
     border-bottom: 0;
     border-left: 0;
 
-    background-color: transparent;
+    background-color: transparent; 
 }
 
-main section:nth-of-type(5) ul li:last-child .accordion-button {
+main section:nth-of-type(5) ul li:last-child button {
     border-bottom: 1px solid var(--text-color);  
 }
 
-.accordion-button h3 {
+main section:nth-of-type(5) ul li button h3 {
     text-align: left;
 }
 
-.accordion-button h3 span:nth-of-type(1) {
+main section:nth-of-type(5) ul li button h3 span:nth-of-type(1) {
     grid-column-start: 1;
     grid-column-end: 5;
 }
 
-.accordion-button h3 span:nth-of-type(2) {
+main section:nth-of-type(5) ul li button h3 span:nth-of-type(2) {
     grid-column-start: 5;
     grid-column-end: 9;
 }
 
-.accordion-button h3 span:nth-of-type(3) {
+main section:nth-of-type(5) ul li button h3 span:nth-of-type(3) {
     grid-column-start: 9;
     grid-column-end: 13;
 }
 
-.accordion-panel { 
+main section:nth-of-type(5) ul li div { 
     display: none;
 }
 
-.accordion-panel p {
+main section:nth-of-type(5) ul li:last-child div {
+    border-top: none;
+    border-bottom: 1px solid var(--text-color);
+}
+
+main section:nth-of-type(5) ul li div h4 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+}
+
+main section:nth-of-type(5) ul li div p {
+    grid-column-start: 5;
+    grid-column-end: 13;
+
     text-transform: none;
 }
 
-.accordion-panel-toggle {
+main section:nth-of-type(5) ul li div.accordion-toggle {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 2em;
@@ -160,25 +162,18 @@ main section:nth-of-type(5) ul li:last-child .accordion-button {
     border-top: 1px solid var(--text-color);
 }
 
-main section:nth-of-type(5) ul li:last-child .accordion-panel-toggle {
-    border-top: none;
-    border-bottom: 1px solid var(--text-color);
-}
-
-.accordion-panel-toggle h4 {
-    grid-column-start: 1;
-    grid-column-end: 5;
-}
-
-.accordion-panel-toggle p {
-    grid-column-start: 5;
-    grid-column-end: 13;
-}
+/* ********** */
+/* SECTION 6 */
+/* ******** */
 
 main section:nth-of-type(6) h2 {
     grid-column-start: 3;
     grid-column-end: 13;
 }
+
+/* ********** */
+/* SECTION 7 */
+/* ******** */
 
 main section:nth-of-type(7) h2 {
     grid-column-start: 1;
@@ -194,10 +189,12 @@ main section:nth-of-type(7) article ul:nth-of-type(1) {
     grid-column-start: 1;
     grid-column-end: 5;
 }
+
 main section:nth-of-type(7) article ul:nth-of-type(2) {
     grid-column-start: 5;
     grid-column-end: 9;
 }
+
 main section:nth-of-type(7) article ul:nth-of-type(3) {
     grid-column-start: 9;
     grid-column-end: 13;
@@ -207,24 +204,25 @@ main section:nth-of-type(7) article ul h3 {
     margin-bottom: 1em;
 }
 
-main section:nth-of-type(7) article ul li {
-    text-transform: none;
+/* ********** */
+/* SECTION 8 */
+/* ******** */
+
+main section:nth-of-type(8) h2 {
+    grid-column-start: 1;
+    grid-column-end: 13;
 }
+
+main section:nth-of-type(8) p {
+    grid-column-start: 3;
+    grid-column-end: 8;
+}
+
+/* ********** */
+/* SECTION 9 */
+/* ******** */
 
 main section:nth-of-type(9) {
     display: flex;
     justify-content: center;
-}
-
-footer {
-    display: flex;
-    justify-content: space-between;
-}
-
-footer ul {
-    display: flex;
-}
-
-footer ul li:nth-of-type(1) {
-    padding-right: 1.6em;
 }
