--- a/styles/view/home/main.css
+++ b/styles/view/home/main.css
@@ -40,6 +40,33 @@ main section:nth-of-type(2) article:nth-of-type(2) p:nth-of-type(2) {
     grid-column-end: 13;
 }
 
+@media (max-width: 500px) {   
+    main section:nth-of-type(2) article:nth-of-type(1) h2 {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+
+    main section:nth-of-type(2) article:nth-of-type(1) p {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+
+    main section:nth-of-type(2) article:nth-of-type(1) div {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+
+    main section:nth-of-type(2) article:nth-of-type(2) p:nth-of-type(1) {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+    
+    main section:nth-of-type(2) article:nth-of-type(2) p:nth-of-type(2) {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+}
+
 /* ********** */
 /* SECTION 3 */
 /* ******** */
@@ -47,6 +74,13 @@ main section:nth-of-type(2) article:nth-of-type(2) p:nth-of-type(2) {
 main section:nth-of-type(3) h2 {
     grid-column-start: 3;
     grid-column-end: 13;
+}
+
+@media (max-width: 500px) {   
+    main section:nth-of-type(3) h2 {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
 }
 
 /* ********** */
@@ -79,6 +113,28 @@ main section:nth-of-type(4) article:nth-of-type(2) div {
 
 main section:nth-of-type(4) article:nth-of-type(2) div img {
     width: 75%;
+}
+
+@media (max-width: 500px) {   
+    main section:nth-of-type(4) article:nth-of-type(1) h2 {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+    
+    main section:nth-of-type(4) article:nth-of-type(1) p:nth-of-type(1) {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+    
+    main section:nth-of-type(4) article:nth-of-type(1) p:nth-of-type(2) {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+    
+    main section:nth-of-type(4) article:nth-of-type(2) div {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
 }
 
 /* ********** */
@@ -162,6 +218,18 @@ main section:nth-of-type(5) ul li div.accordion-toggle {
     border-top: 1px solid var(--text-color);
 }
 
+@media (max-width: 500px) {   
+    main section:nth-of-type(5) h2 {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }   
+    
+    main section:nth-of-type(5) ul {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+}
+
 /* ********** */
 /* SECTION 6 */
 /* ******** */
@@ -169,6 +237,13 @@ main section:nth-of-type(5) ul li div.accordion-toggle {
 main section:nth-of-type(6) h2 {
     grid-column-start: 3;
     grid-column-end: 13;
+}
+
+@media (max-width: 500px) {   
+    main section:nth-of-type(6) h2 {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
 }
 
 /* ********** */
@@ -204,6 +279,33 @@ main section:nth-of-type(7) article ul h3 {
     margin-bottom: 1em;
 }
 
+@media (max-width: 500px) {   
+    main section:nth-of-type(7) h2 {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+    
+    main section:nth-of-type(7) article {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+    
+    main section:nth-of-type(7) article ul:nth-of-type(1) {
+        grid-column-start: 1;
+        grid-column-end: 6;
+    }
+    
+    main section:nth-of-type(7) article ul:nth-of-type(2) {
+        grid-column-start: 7;
+        grid-column-end: 13;
+    }
+    
+    main section:nth-of-type(7) article ul:nth-of-type(3) {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+}
+
 /* ********** */
 /* SECTION 8 */
 /* ******** */
@@ -218,6 +320,13 @@ main section:nth-of-type(8) p {
     grid-column-end: 8;
 }
 
+@media (max-width: 500px) {       
+    main section:nth-of-type(8) p {
+        grid-column-start: 1;
+        grid-column-end: 13;
+    }
+}
+
 /* ********** */
 /* SECTION 9 */
 /* ******** */
@@ -225,4 +334,8 @@ main section:nth-of-type(8) p {
 main section:nth-of-type(9) {
     display: flex;
     justify-content: center;
+}
+
+main section:nth-of-type(9) img {
+    width: 75%;
 }
