--- a/styles/general/typography.css
+++ b/styles/general/typography.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: "OverusedGroteskRoman";
+    font-family: "OverusedGrotesk-Roman";
     src: url("/font/OverusedGrotesk-Roman.woff");
 }
 
 @font-face {
-    font-family: "OverusedGroteskMedium";
+    font-family: "OverusedGrotesk-Medium";
     src: url("/font/OverusedGrotesk-Medium.woff");
 }
 
@@ -23,11 +23,11 @@ h1, h2, h3, h4, h5, h6, p, li, a, button {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "OverusedGroteskRoman";
+    font-family: "OverusedGrotesk-Roman";
 }
 
 p, li, a, button {
-    font-family: "OverusedGroteskMedium";
+    font-family: "OverusedGrotesk-Medium";
 }
 
 li {
