--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 }
 
 @font-face {
-    font-family: "ClashDisplayRegular";
+    font-family: "ClashDisplay-Regular";
     src: url("/font/ClashDisplay-Regular.woff");
 }
 
