--- a/styles/general/typography.css
+++ b/styles/general/typography.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: "OverusedGrotesk-Roman";
     src: url("/font/OverusedGrotesk-Roman.woff");
 }
@@ -64,7 +64,6 @@ a {
     }
 }
 
-/* CORRECT NORMAL */
 @media (min-width: 500px) {  
     .text-small {
         font-size: .75em;
@@ -79,7 +78,6 @@ a {
     }
 }
 
-/* CORRECT NORMAL */
 @media (min-width: 700px) {  
     .text-small {
         font-size: .8em;
@@ -94,7 +92,6 @@ a {
     }
 }
 
-/* CORRECT NORMAL */
 @media (min-width: 900px) {
     .text-small {
         font-size: 1em;
@@ -109,7 +106,6 @@ a {
     }
 }
 
-/* CORRECT NORMAL */
 @media (min-width: 1100px) {    
     .text-medium {
         font-size: 1.5em;
@@ -120,7 +116,6 @@ a {
     }
 }
 
-/* CORRECT NORMAL */
 @media (min-width: 1300px) {
     .text-small {
         font-size: 1.2em;
@@ -135,7 +130,6 @@ a {
     }
 }
 
-/* CORRECT NORMAL */
 @media (min-width: 1500px) {
     .text-medium {
         font-size: 2em;
@@ -144,4 +138,4 @@ a {
     .text-large {
         font-size: 10em;
     }
-}
+} */
