--- a/styles/general/typography.css
+++ b/styles/general/typography.css
@@ -1,25 +1,16 @@
-/* @font-face {
+@font-face {
     font-family: "OverusedGrotesk-Roman";
-    src: url("/font/OverusedGrotesk-Roman.woff");
+    src: url("font/OverusedGrotesk-Roman.woff");
 }
 
 @font-face {
     font-family: "OverusedGrotesk-Medium";
-    src: url("/font/OverusedGrotesk-Medium.woff");
-}
-
-@font-face {
-    font-family: "MoglanDemo";
-    src: url("/font/MoglanDemo.woff");
-}
-
-@font-face {
-    font-family: "ClashDisplay-Regular";
-    src: url("/font/ClashDisplay-Regular.woff");
+    src: url("font/OverusedGrotesk-Medium.woff");
 }
 
 h1, h2, h3, h4, h5, h6, p, li, a, button {
     color: var(--text-color);
+    -webkit-font-smoothing: antialiased;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -39,6 +30,7 @@ a {
 }
 
 .text-small {
+    text-transform: uppercase;
     line-height: 140%;
 }
 
@@ -138,4 +130,4 @@ a {
     .text-large {
         font-size: 10em;
     }
-} */
+}
