--- a/styles/general/typography.css
+++ b/styles/general/typography.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: "OverusedGrotesk-Roman";
     src: url("font/OverusedGrotesk-Roman.woff");
 }
@@ -130,4 +130,4 @@ a {
     .text-large {
         font-size: 10em;
     }
-}
+} */
